--- a/Manuscript Notebooks/Monte Carlo Simulation/MonteCarlo.ipynb
+++ b/Manuscript Notebooks/Monte Carlo Simulation/MonteCarlo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Monte Carlo Simulation for Scenario 1"
+    "## Monte Carlo Simulation for Scenario 2"
    ]
   },
   {
@@ -1149,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update parameters according to Scenario 1"
+    "### Update parameters according to Scenario 2"
    ]
   },
   {
@@ -1215,7 +1215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Default results for Scenario 1"
+    "### Default results for Scenario 2"
    ]
   },
   {
